// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Input /> Render must match inactive() 1`] = `
<div>
  <input
    aria-label="Repository description"
    class="form-control input-inactive"
    placeholder="Fantastic placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> Render must match regular() 1`] = `
<div>
  <input
    aria-label="Repository description"
    class="form-control"
    placeholder="Fantastic placeholder"
    type="text"
    value=""
  />
</div>
`;
